--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
             </div>
         </div>
     </section>
-    <section class="work-scheme sect-pad">
+    <section class="work-scheme">
         <div class="container">
             <div class="title-wrap">
                 <h2 class="work-scheme__title title color-yellow">как мы работаем</h2>
@@ -858,102 +858,128 @@
             </div>
         </div>
     </section>
-    <section class="comments">
-        <div class="comments__decor">
-            <svg xmlns="http://www.w3.org/2000/svg" width="153" height="126" viewBox="0 0 153 126" fill="none">
-                <path d="M116.722 0H89.3814L113.567 59.2941H93.0619V126H153V65.1177L116.722 0ZM27.3402 0H0L24.1856 59.2941H3.15463V126H63.6186V65.1177L27.3402 0Z" fill="white" fill-opacity="0.85"/>
-            </svg>
-        </div>
-        <div class="comments__slider-decor">
-            <img src="./assets/img/bg/comments-decor.png" alt="decor-img">
-        </div>
+    <section class="comments sect-pad">
         <div class="container">
-            <div class="comments__main">
-                <h2 class="xomments__main__title title color-yellow">Отзывы клиентов</h2>
-                <div class="comments__main__descr color-grey">
-                    Как наша команда помогла избавиться от назойливых насекомых, грызунов и бактерий, создавая комфорт и безопасность в их жилищах, офисах, приусадебных участках.
-                </div>
+            <div class="comments__decor">
+                <svg xmlns="http://www.w3.org/2000/svg" width="153" height="126" viewBox="0 0 153 126" fill="none">
+                    <path d="M116.722 0H89.3814L113.567 59.2941H93.0619V126H153V65.1177L116.722 0ZM27.3402 0H0L24.1856 59.2941H3.15463V126H63.6186V65.1177L27.3402 0Z" fill="white" fill-opacity="0.85"/>
+                </svg>
             </div>
-            <div class="comments__slider">
-                <div class="comments__slider__wrap owl-carousel">
-                    <div class="comments__slider__wrap__item">
-                        <div class="comments__slider__wrap__item__header">
-                            <div class="comments__slider__wrap__item__header__img">
-                                <img src="./assets/icon/comment/avatar-1.png" alt="user-icon">
-                            </div>
-                            <div class="comments__slider__wrap__item__header__user-info">
-                                <span class="comments__slider__wrap__item__header__user-info__name color-black">
-                                    Мария М.
-                                </span>
-                                <span class="comments__slider__wrap__item__header__user-info__job color-grey">
-                                    Дезинсекция квартиры
-                                </span>
-                            </div>
-                        </div>
-                        <div class="comments__slider__wrap__item__text color-grey">
-                            <p>
-                                Недавно заметила укусы на руках, оказалось покусали клопы. Я их заметила после того как стала осматривать квартиру.
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam omnis sint ad quis veniam hic blanditiis repudiandae ratione eaque. Dolores!
-                            </p>
-                            <p>
-                                Облазила все форумы в интернете, но все же не рискнула бороться с ними самостоятельно народными средствами или пшыкалками разными, так как много людей писали, что все это не помогает. 
-                            </p>
-                            <p>
-                                Обратилась в службу Корпорация Дезинсекции. Ребята приехали все обработали, слава богу вывели эту нечисть! Спасибо огромное, особенно специалисту Владимиру.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="comments__slider__wrap__item">
-                        <div class="comments__slider__wrap__item__header">
-                            <div class="comments__slider__wrap__item__header__img">
-                                <img src="./assets/icon/comment/avatar-2.png" alt="user-icon">
-                            </div>
-                            <div class="comments__slider__wrap__item__header__user-info">
-                                <span class="comments__slider__wrap__item__header__user-info__name color-black">
-                                    Константин Ф.
-                                </span>
-                                <span class="comments__slider__wrap__item__header__user-info__job color-grey">
-                                    Дезинсекция квартиры
-                                </span>
-                            </div>
-                        </div>
-                        <div class="comments__slider__wrap__item__text color-grey">
-                            <p>
-                                Долго пытался справиться с тараканами в офисе. Что только не перепробовал, все напрасно. Теперь точно могу сказать, что неблагодарное это занятие. 
-                            </p>
-                            <p>
-                                Хотите сэкономить деньги и нервы обращайтесь в Корпорацию Дезинсекции.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="comments__slider__wrap__item">
-                        <div class="comments__slider__wrap__item__header">
-                            <div class="comments__slider__wrap__item__header__img">
-                                <img src="./assets/icon/comment/avatar-3.png" alt="user-icon">
-                            </div>
-                            <div class="comments__slider__wrap__item__header__user-info">
-                                <span class="comments__slider__wrap__item__header__user-info__name color-black">
-                                    Мария М.
-                                </span>
-                                <span class="comments__slider__wrap__item__header__user-info__job color-grey">
-                                    Дезинсекция квартиры
-                                </span>
-                            </div>
-                        </div>
-                        <div class="comments__slider__wrap__item__text color-grey">
-                            <p>
-                                Недавно заметила укусы на руках, оказалось покусали клопы. Я их заметила после того как стала осматривать квартиру. Облазила все форумы в интернете, но все же не рискнула бороться с ними самостоятельно народными средствами или пшыкалками разными, так как много людей писали, что все это не помогает. Обратилась в службу Корпорация Дезинсекции. Ребята приехали все обработали, слава богу вывели эту нечисть! Спасибо огромное, особенно специалисту Владимиру.
-                            </p>
-                        </div>
+            <div class="comments__content">
+                <div class="comments__content__main">
+                    <h2 class="xomments__content__main__title title color-yellow">Отзывы клиентов</h2>
+                    <div class="comments__content__main__descr color-grey">
+                        Как наша команда помогла избавиться от назойливых насекомых, грызунов и бактерий, создавая комфорт и безопасность в их жилищах, офисах, приусадебных участках.
                     </div>
                 </div>
-                <div class="comments__slider__next">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="60" viewBox="0 0 40 60">
-                        <rect width="40" height="60" rx="2" fill="#F5C233"/>
-                        <path d="M11 29.25C10.5858 29.25 10.25 29.5858 10.25 30C10.25 30.4142 10.5858 30.75 11 30.75V29.25ZM29.5303 30.5303C29.8232 30.2374 29.8232 29.7626 29.5303 29.4697L24.7574 24.6967C24.4645 24.4038 23.9896 24.4038 23.6967 24.6967C23.4038 24.9896 23.4038 25.4645 23.6967 25.7574L27.9393 30L23.6967 34.2426C23.4038 34.5355 23.4038 35.0104 23.6967 35.3033C23.9896 35.5962 24.4645 35.5962 24.7574 35.3033L29.5303 30.5303ZM11 30.75H29V29.25H11V30.75Z" fill="#212224"/>
-                    </svg>
+                <div class="comments__content__slider">
+                    <div class="comments__content__slider__wrap swiper">
+                        <div class="swiper-wrapper">
+                            <div class="comments__content__slider__wrap__item swiper-slide">
+                                <div class="comments__content__slider__wrap__item__header">
+                                    <div class="comments__content__slider__wrap__item__header__img">
+                                        <img src="./assets/icon/comment/avatar-1.png" alt="user-icon">
+                                    </div>
+                                    <div class="comments__content__slider__wrap__item__header__user-info">
+                                        <span class="comments__content__slider__wrap__item__header__user-info__name color-black">
+                                            Мария М.
+                                        </span>
+                                        <span class="comments__content__slider__wrap__item__header__user-info__job color-grey">
+                                            Дезинсекция квартиры
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="comments__content__slider__wrap__item__text color-grey">
+                                    <p>
+                                        Недавно заметила укусы на руках, оказалось покусали клопы. Я их заметила после того как стала осматривать квартиру.
+                                    </p>
+                                    <p>
+                                        Облазила все форумы в интернете, но все же не рискнула бороться с ними самостоятельно народными средствами или пшыкалками разными, так как много людей писали, что все это не помогает. 
+                                    </p>
+                                    <p>
+                                        Обратилась в службу Корпорация Дезинсекции. Ребята приехали все обработали, слава богу вывели эту нечисть! Спасибо огромное, особенно специалисту Владимиру.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="comments__content__slider__wrap__item swiper-slide">
+                                <div class="comments__content__slider__wrap__item__headercontent__">
+                                    <div class="comments__content__slider__wrap__item__header__img">
+                                        <img src="./assets/icon/comment/avatar-2.png" alt="user-icon">
+                                    </div>
+                                    <div class="comments__content__slider__wrap__item__header__user-info">
+                                        <span class="comments__content__slider__wrap__item__header__user-info__name color-black">
+                                            Константин Ф.
+                                        </span>
+                                        <span class="comments__content__slider__wrap__item__header__user-info__job color-grey">
+                                            Дезинсекция квартиры
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="comments__content__slider__wrap__item__text color-grey">
+                                    <p>
+                                        Долго пытался справиться с тараканами в офисе. Что только не перепробовал, все напрасно. Теперь точно могу сказать, что неблагодарное это занятие. 
+                                    </p>
+                                    <p>
+                                        Хотите сэкономить деньги и нервы обращайтесь в Корпорацию Дезинсекции.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="comments__content__slider__wrap__item swiper-slide">
+                                <div class="comments__content__slider__wrap__item__header">
+                                    <div class="comments__content__slider__wrap__item__header__img">
+                                        <img src="./assets/icon/comment/avatar-3.png" alt="user-icon">
+                                    </div>
+                                    <div class="comments__content__slider__wrap__item__header__user-info">
+                                        <span class="comments__content__slider__wrap__item__header__user-info__name color-black">
+                                            Мария М.
+                                        </span>
+                                        <span class="comments__content__slider__wrap__item__header__user-info__job color-grey">
+                                            Дезинсекция квартиры
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="comments__content__slider__wrap__item__text color-grey">
+                                    <p>
+                                        Недавно заметила укусы на руках, оказалось покусали клопы. Я их заметила после того как стала осматривать квартиру. Облазила все форумы в интернете, но все же не рискнула бороться с ними самостоятельно народными средствами или пшыкалками разными, так как много людей писали, что все это не помогает. Обратилась в службу Корпорация Дезинсекции. Ребята приехали все обработали, слава богу вывели эту нечисть! Спасибо огромное, особенно специалисту Владимиру.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="comments__content__slider__wrap__item swiper-slide">
+                                <div class="comments__content__slider__wrap__item__header">
+                                    <div class="comments__content__slider__wrap__item__header__img">
+                                        <img src="./assets/icon/comment/avatar-3.png" alt="user-icon">
+                                    </div>
+                                    <div class="comments__content__slider__wrap__item__header__user-info">
+                                        <span class="comments__content__slider__wrap__item__header__user-info__name color-black">
+                                            Мария М.
+                                        </span>
+                                        <span class="comments__content__slider__wrap__item__header__user-info__job color-grey">
+                                            Дезинсекция квартиры
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="comments__content__slider__wrap__item__text color-grey">
+                                    <p>
+                                        Недавно заметила укусы на руках, оказалось покусали клопы. Я их заметила после того как стала осматривать квартиру. Облазила все форумы в интернете, но все же не рискнула бороться с ними самостоятельно народными средствами или пшыкалками разными, так как много людей писали, что все это не помогает. Обратилась в службу Корпорация Дезинсекции. Ребята приехали все обработали, слава богу вывели эту нечисть! Спасибо огромное, особенно специалисту Владимиру.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="comments__content__slider__prev">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="60" viewBox="0 0 40 60" fill="none">
+                            <rect x="-0.75" y="0.75" width="38.5" height="58.5" rx="1.25" transform="matrix(-1 0 0 1 39 0)" stroke="#C3C3C3"/>
+                            <path d="M29 29.25C29.4142 29.25 29.75 29.5858 29.75 30C29.75 30.4142 29.4142 30.75 29 30.75V29.25ZM10.4697 30.5303C10.1768 30.2374 10.1768 29.7626 10.4697 29.4697L15.2426 24.6967C15.5355 24.4038 16.0104 24.4038 16.3033 24.6967C16.5962 24.9896 16.5962 25.4645 16.3033 25.7574L12.0607 30L16.3033 34.2426C16.5962 34.5355 16.5962 35.0104 16.3033 35.3033C16.0104 35.5962 15.5355 35.5962 15.2426 35.3033L10.4697 30.5303ZM29 30.75H11V29.25H29V30.75Z" fill="#C4C4C4"/>
+                        </svg>
+                    </div>
+                    <div class="comments__content__slider__next">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="60" viewBox="0 0 40 60" fill="none">
+                            <rect x="0.75" y="0.75" width="38.5" height="58.5" rx="1.25" stroke="#F5C233" stroke-width="1.5"/>
+                            <path d="M11 29.25C10.5858 29.25 10.25 29.5858 10.25 30C10.25 30.4142 10.5858 30.75 11 30.75V29.25ZM29.5303 30.5303C29.8232 30.2374 29.8232 29.7626 29.5303 29.4697L24.7574 24.6967C24.4645 24.4038 23.9896 24.4038 23.6967 24.6967C23.4038 24.9896 23.4038 25.4645 23.6967 25.7574L27.9393 30L23.6967 34.2426C23.4038 34.5355 23.4038 35.0104 23.6967 35.3033C23.9896 35.5962 24.4645 35.5962 24.7574 35.3033L29.5303 30.5303ZM11 30.75H29V29.25H11V30.75Z" fill="#F5C233"/>
+                        </svg>
+                    </div>
+                    <div class="comments__content__slider__dots"></div>
                 </div>
-                <div class="comments__slider__dots"></div>
             </div>
         </div>
     </section>
